--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ plotly
 ctext
 dotenv
 matplotlib
-GEMINI_API_KEY=AIzaSyCRPO4GFrRZ7I5nAiycwKkg9rUFLNNVvV8
+GEMINI_API_KEY="AIzaSyCRPO4GFrRZ7I5nAiycwKkg9rUFLNNVvV8"
